// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options should allow the user to order the fieldName options by dragging and dropping the options 1`] = `
<div class="form-group">
  <div class="ddm-field-options-container">
    <div class="ddm-options-target" data-index="0"></div>
    <div class="ddm-field-options" data-index="0"><svg aria-hidden="true" class="lexicon-icon ddm-options-drag lexicon-icon-drag">
        <use xlink:href="icons.svg#drag"></use>
      </svg>
      <div class="ddm-option-entry">
        <div class="form-group">
          <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabeloption0" type="text" placeholder="enter-an-option" value="Option 2"></div>
          <div class="active form-text key-value-editor"><label class="control-label key-value-label">Field Name:</label><input class="key-value-input" type="text" value="Option2"></div>
        </div><button class="close close-modal" type="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <use xlink:href="icons.svg#times"></use>
          </svg></button>
      </div>
    </div>
    <div class="ddm-options-target" data-index="1"></div>
    <div class="ddm-field-options" data-index="1"><svg aria-hidden="true" class="lexicon-icon ddm-options-drag lexicon-icon-drag">
        <use xlink:href="icons.svg#drag"></use>
      </svg>
      <div class="ddm-option-entry">
        <div class="form-group">
          <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabeloption1" type="text" placeholder="enter-an-option" value="Option 1"></div>
          <div class="active form-text key-value-editor"><label class="control-label key-value-label">Field Name:</label><input class="key-value-input" type="text" value="Option1"></div>
        </div><button class="close close-modal" type="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <use xlink:href="icons.svg#times"></use>
          </svg></button>
      </div>
    </div>
    <div class="ddm-options-target" data-index="2"></div>
    <div class="ddm-field-options" data-index="2"><svg aria-hidden="true" class="lexicon-icon ddm-options-drag lexicon-icon-drag">
        <use xlink:href="icons.svg#drag"></use>
      </svg>
      <div class="ddm-option-entry">
        <div class="form-group">
          <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabeloption2" type="text" placeholder="enter-an-option" value=""></div>
          <div class="active form-text key-value-editor"><label class="control-label key-value-label">Field Name:</label><input class="key-value-input" type="text" value=""></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Options should show the options 1`] = `
<div class="form-group">
  <div class="ddm-field-options-container">
    <div class="ddm-options-target" data-index="0"></div>
    <div class="ddm-field-options" data-index="0"><svg aria-hidden="true" class="lexicon-icon ddm-options-drag lexicon-icon-drag">
        <use xlink:href="icons.svg#drag"></use>
      </svg>
      <div class="ddm-option-entry">
        <div class="form-group">
          <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabeloption0" type="text" placeholder="enter-an-option" value="Option 1"></div>
          <div class="active form-text key-value-editor"><label class="control-label key-value-label">Field Name:</label><input class="key-value-input" type="text" value="Option1"></div>
        </div><button class="close close-modal" type="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <use xlink:href="icons.svg#times"></use>
          </svg></button>
      </div>
    </div>
    <div class="ddm-options-target" data-index="1"></div>
    <div class="ddm-field-options" data-index="1"><svg aria-hidden="true" class="lexicon-icon ddm-options-drag lexicon-icon-drag">
        <use xlink:href="icons.svg#drag"></use>
      </svg>
      <div class="ddm-option-entry">
        <div class="form-group">
          <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabeloption1" type="text" placeholder="enter-an-option" value="Option 2"></div>
          <div class="active form-text key-value-editor"><label class="control-label key-value-label">Field Name:</label><input class="key-value-input" type="text" value="Option2"></div>
        </div><button class="close close-modal" type="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
            <use xlink:href="icons.svg#times"></use>
          </svg></button>
      </div>
    </div>
    <div class="ddm-options-target" data-index="2"></div>
    <div class="ddm-field-options" data-index="2"><svg aria-hidden="true" class="lexicon-icon ddm-options-drag lexicon-icon-drag">
        <use xlink:href="icons.svg#drag"></use>
      </svg>
      <div class="ddm-option-entry">
        <div class="form-group">
          <div class="form-group"><input class="ddm-field-text form-control" name="keyValueLabeloption2" type="text" placeholder="enter-an-option" value=""></div>
          <div class="active form-text key-value-editor"><label class="control-label key-value-label">Field Name:</label><input class="key-value-input" type="text" value=""></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
